<resources>
    <string name="app_name">MCC</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">User Name</string>
    <string name="btn_login">Login</string>
    <string name="font_circular_medium">circular-medium.ttf</string>
    <string name="font_circular_bold">circular-bold.ttf</string>
    <string name="font_circular_book">circular-book.ttf</string>
    <string name="font_circular_black">circular-black.ttf</string>
    <string name="font_normal">din_pro_light.otf</string>
    <string name="no_internet">Your internet seems to be offline!</string>
    <string name="view_image">View Inspected Image</string>
    <string name="take_action">Take Action</string>
    <string name="view_action">View Action</string>
    <string name="action_taken_tv">Action Taken Against Inspection Report for High Value Project</string>
    <string name="init_vector">2SN22SkJGDyOAXUU</string>
    <string name="version">Version</string>
    <string name="home_title">Home Page</string>
    <string name="pending_works_for_upload">Pending works for Upload</string>
    <string name="view_works">View Works</string>
    <string name="pending_uploads">Pending Uploads</string>
    <string name="village_list">Village List</string>
    <string name="choose_capacity_of_mcc_in_tonnes">Choose Capacity of MCC in Tonnes</string>
    <string name="choose_no_of_thooimai_kavalar">Choose No Of Thooimai Kaavalar</string>
    <string name="capacity">Capacity</string>
    <string name="thooimai_kavalar_name">Name</string>
    <string name="thooimai_kavalar_mobile_number">Mobile Number</string>
    <string name="date_of_engage">Date of Engagement</string>
    <string name="date_of_training">Date of Training</string>
    <string name="add">Add</string>
    <string name="select_habitation">Select Habitation</string>
    <string name="select_water_supply">Select Water Supply Availability</string>
    <string name="please_specify">Please Specify</string>
    <string name="add_thooimai_kaavalar">Add Thooimai Kaavalar</string>
    <string name="submit">Submit</string>
    <string name="go">Go</string>
    <string name="micro_composite_center">Choose MICRO COMPOSTING CENTRE</string>
    <string name="please_enter_name">Please Enter Thooimai Kaavalar Name</string>
    <string name="please_enter_mobile_number">Please Enter Thooimai Kaavalar Mobile Number</string>
    <string name="please_enter_valid_mobile_number">Please Enter Thooimai Kaavalar Valid Mobile Number</string>
    <string name="please_enter_data_of_engage">Please Enter Thooimai Kaavalar Date Of Engage</string>
    <string name="please_enter_date_of_training">Please Enter Thooimai Kaavalar Date Of Training</string>
    <string name="add_new_mcc">Add New MCC</string>
    <string name="edit_mcc">View/Edit MCC</string>
    <string name="enter_mcc_name">Enter MCC Name</string>
    <string name="please_enter_mcc_name">Please Enter MCC Name</string>
    <string name="select_date_of_commencement">Select Date Of Commencement</string>
    <string name="capture_mcc_center">Capture MICRO COMPOSTING CENTRE</string>
    <string name="please_capture_mcc_center">Please Capture MICRO COMPOSTING CENTRE</string>
    <string name="save">Save</string>
    <string name="software_d_a_d_b_nic">Software Designed &amp; Developed by NIC</string>
    <string name="close">Close</string>
    <string name="add_photo">Add Photo</string>
    <string name="no_data_available_for_offline">No data available for offline. Please Turn On Your Network</string>
    <string name="log_in_again">Login Again</string>
    <string name="invalid_user_name_password">Invalid UserName Or Password</string>
    <string name="internet_connection_is_not_available">Internet Connection is not available..Please Turn ON Network Connection OR Continue With Off-line Mode…</string>
    <string name="settings">Settings</string>
    <string name="continue_with_off_line">Continue With Off-Line</string>
    <string name="please_enter_user_name_password">Please enter your username and password!</string>
    <string name="please_enter_user_name">Please enter your username!</string>
    <string name="please_enter_user_password">Please enter your password!</string>
    <string name="logging_out_loss_data">Logging out while offline may leads to loss of data!</string>
    <string name="sync_all_the_data_before_logout">Sync all the data before logout!</string>
    <string name="you_want_to_log_out">Are you sure you want to Logout ?</string>
    <string name="you_want_to_exit">Are you sure you want to Exit ?</string>
    <string name="gps_is_not_turned_on">GPS is not turned on…</string>
    <string name="satellite">Satellite communication not available to get GPS Co-ordination Please Capture Photo in Open Area…</string>
    <string name="permission_required">Permissions required!</string>
    <string name="camera_need_permission">Camera needs few permissions to work properly. Grant them in settings.</string>
    <string name="goto_settings">GOTO SETTINGS</string>
    <string name="cancel">Cancel</string>
    <string name="inserted_success">Inserted Success!</string>
    <string name="updated_success">Updated Success!</string>
    <string name="user_canceled_image_capture">User cancelled image capture</string>
    <string name="sorry_failed_to_capture">Sorry! Failed to capture image</string>
    <string name="user_canceled_video">User cancelled video recording</string>
    <string name="sorry_failed_capture_video">Sorry! Failed to record video</string>
    <string name="successfully_deleted">Successfully Deleted</string>
    <string name="no_record_found">NO RECORD FOUND!</string>
    <string name="at_least_capture_one_photo">At least Capture one Photo</string>
    <string name="please_enter_description">Please Enter Description</string>
    <string name="please_capture_image">Please Capture Image</string>
    <string name="maximum_three_photos">Maximum three Photo allowed</string>
    <string name="first_capture_image_add_another">First Capture Image and add remark then add another Image!</string>
    <string name="please_enter_all_the_details">Please enter All the Details!</string>
    <string name="do_you_wnat_to_upload">Do You Want to Upload?</string>
    <string name="do_you_wnat_to_delete">Do You Want to Delete?</string>
    <string name="please_choose_date_of_training">Please Choose Date of Training</string>
    <string name="please_choose_date_of_engagement">Please Choose Date of Engagement</string>
    <string name="font_regular">yanonekaffeesatz_regular.ttf</string>
    <string name="back_icon">back_icon</string>
    <string name="cd_work_list">CD Work List</string>
    <string name="select_financial_year">Select Financial Year</string>
    <string name="select_scheme">Select Scheme</string>
    <string name="habitation_name">Habitation Name</string>
    <string name="dashboard">Dashboard</string>
    <string name="add_thooimai_kaavalar_details">Add Thooimai Kaavalar Details</string>
    <string name="add_icon">add_icon</string>
    <string name="view_edit_thooimai_kaavalar_details">View/Edit Thooimai Kaavalar Details</string>
    <string name="view_edit_icon">view_edit_icon</string>
    <string name="view_take_component_photos">View/Take Component Photos</string>
    <string name="view_take_icon">view_take_icon</string>
    <string name="mcc_name_icon">mcc_name_icon</string>
    <string name="specify_icon">specify_icon</string>
    <string name="calender_icon">calender_icon</string>
    <string name="camera_icon">camera_icon</string>
    <string name="mcc_center_iamge_icon">mcc_center_iamge_icon</string>
    <string name="menu_icon">menu_icon</string>
    <string name="pending_screen">Pending Screen</string>
    <string name="thooimai_kaavalar_screen">Thooimai Kaavalar Screen</string>
    <string name="view_mcc">View MCC</string>
    <string name="select_village">Select Village</string>
    <string name="mcc_list">MCC List</string>
    <string name="close_icon">close_icon</string>
    <string name="components_photos">Components Photos</string>
    <string name="view_delete_images">View/Delete Images</string>
    <string name="add_images">Add Images</string>
    <string name="no_data_icon">no_data_icon</string>
    <string name="work_list">Work List</string>
    <string name="no_projects_found">No Projects Found!</string>
    <string name="cd_work_name">CD Work Name</string>
    <string name="chainage">Chainage</string>
    <string name="work_stage">Work Stage</string>
    <string name="take_photo">Take Photo</string>
    <string name="view_online_image">View Online Image</string>
    <string name="view_offline_image">View Offline Image</string>
    <string name="village_name_icon">village_name_icon</string>
    <string name="info_icon">info_icon</string>
    <string name="scheme_group_name">Scheme Group Name</string>
    <string name="scheme_name">Scheme Name</string>
    <string name="financial_year">Financial Year</string>
    <string name="agency_name">Agency Name</string>
    <string name="work_group_name">Work Group Name</string>
    <string name="work_name">Work Name</string>
    <string name="block">Block</string>
    <string name="village">Village</string>
    <string name="current_stage">Current Stage</string>
    <string name="beneficiary_nname">Beneficiary \nName</string>
    <string name="gender">Gender</string>
    <string name="initial_amount">Initial Amount</string>
    <string name="amount_spent_so_far">Amount Spent So Far</string>
    <string name="last_visited_date">Last Visited Date</string>
    <string name="view_cd_works">View CD Works</string>
    <string name="save_image_local">SAVE IMAGE LOCAL</string>
    <string name="you_can_capture_upto_3_photos">You can Capture up to 3 Photos</string>
    <string name="ok">OK</string>
    <string name="enter_details">Enter Details</string>
    <string name="length_of_weir_in_m">Length of weir (in m)</string>
    <string name="enter_length">Enter Length</string>
    <string name="height_of_weir_in_m">Height of weir (in m)</string>
    <string name="enter_height">Enter Height</string>
    <string name="length_of_water_storage_in_upstream_side_of_channel_in_m">Length of water storage in upstream side of channel (in m)</string>
    <string name="enter_length_of_water_storage">Enter Length Of Water Storage</string>
    <string name="observation_premonsoon_gw_depth_in_m">Observation (premonsoon GW depth in m)</string>
    <string name="enter_observation">Enter Observation</string>
    <string name="no_of_trenches_per_one_work_site">No of trenches per one work site</string>
    <string name="enter_no_of_trenches">Enter no of trenches</string>
    <string name="length_in_m">Length (in m)</string>
    <string name="width_in_m">Width (in m)</string>
    <string name="enter_width">Enter width</string>
    <string name="depth_in_m">depth (in m)</string>
    <string name="enter_depth">Enter depth</string>
    <string name="no_of_units_per_water_body">No of units per water body</string>
    <string name="swm">SWM</string>
    <string name="warning_icon">warning_icon</string>
    <string name="you_need_to_update">You need to update</string>
    <string name="this_version_of_swm_is_no_longer_supported_please_go_to_official_site_and_install_new_version">This version of SWM is no longer supported. Please go to Official Site and install new version</string>
    <string name="update">UPDATE</string>
    <string name="home_icon">home_icon</string>
    <string name="logo_icon">logo_icon</string>
    <string name="how_many_thooimai_kaavalars_add">How Many Thooimai Kaavalars Add?</string>
    <string name="you_can_add_upto_5_person">You can Add up to 5 Person</string>
    <string name="h_fun">-</string>
    <string name="_1">1</string>
    <string name="plus_symbol">+</string>
    <string name="loading_icon">loading_icon</string>
    <string name="loading">Loading…</string>
</resources>