<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="75dp"
    android:layout_height="85dp"
    android:layout_gravity="center"
    android:background="@drawable/progress_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="10dp"

    android:paddingTop="10dp">



    <ImageView
        android:id="@+id/spinnerImageView"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:paddingStart="30dp"
        android:paddingEnd="20dp"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/spinner"
        android:contentDescription="@string/loading_icon" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:text="@string/loading"
        android:fontFamily="@string/font_regular"
        android:textSize="12sp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
          />

</RelativeLayout>
