<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

<data>
    <variable
        name="activity"
        type="com.nic.thooimaikaavalar_old.activity.FullImageActivity" />
</data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <RelativeLayout
            android:id="@+id/header_layout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark">

            <TextView
                android:fontFamily="@string/font_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/view_image"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/back_img"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/_12sdp"
                android:tint="@color/white"
                android:onClick="@{()-> activity.onBackPress()}"
                android:src="@mipmap/back_arrow"
                android:contentDescription="@string/back_icon" />

            <ImageView
                android:tint="@color/white"
                android:id="@+id/home_img"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="@dimen/_12sdp"
                android:onClick="@{()-> activity.homePage()}"
                android:src="@mipmap/home_img"
                android:contentDescription="@string/home_icon" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/image_preview_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header_layout"
            android:fadeScrollbars="false"
            android:scrollbarSize="4dp"
            android:scrollbars="vertical" />

        <ImageView
            android:layout_below="@id/header_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitEnd"
            android:id="@+id/no_data_gif"
            android:layout_centerInParent="true"
            android:src="@drawable/new_no_result_image_1_"
            android:contentDescription="@string/no_data_icon" />


    </RelativeLayout>

</layout>