<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="activity"
            type="com.nic.thooimaikaavalar_old.activity.SplashScreen" />
    </data>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.nic.thooimaikaavalar_old.activity.SplashScreen">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CBEEFFFF"
        tools:ignore="UselessParent">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_20sdp">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/_20sdp"
            android:background="@mipmap/tamilnadu_logo"
            android:scaleType="centerCrop"
            android:contentDescription="@string/logo_icon" />

        <TextView
            android:layout_marginTop="@dimen/_7sdp"
            android:id="@+id/headtext"
            android:fontFamily="@string/font_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView1"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_15sdp" />

    </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>
</layout>