<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="activity"
            type="com.nic.thooimaikaavalar_old.activity.AddThooimaiKaavalarDetails" />
    </data>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddThooimaiKaavalarDetails">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:id="@+id/toolbar"
        android:background="@color/colorPrimaryDark">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/back_img"
            android:src="@mipmap/back_arrow"
            android:tint="@color/white"
            android:padding="@dimen/_10sdp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/back_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            android:text="@string/add_thooimai_kaavalar"
            android:layout_centerInParent="true"
            android:fontFamily="@string/font_regular"
            android:textStyle="bold"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_7sdp"
        android:layout_below="@+id/toolbar">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/_7sdp"
            android:layout_height="wrap_content"
            android:layout_above="@id/add_btn_layout"
            android:id="@+id/add_recycler">
        </androidx.recyclerview.widget.RecyclerView>

        <RelativeLayout
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/add_btn_layout"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/new_bg_log_in_btn_purple">

            <TextView
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/log_in_btn"
                android:text="@string/submit"
                android:fontFamily="@string/font_regular"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                />
        </RelativeLayout>



    </RelativeLayout>


</RelativeLayout>
</layout>